<resources>
    <string name="app_name">Interview</string>
    <string name="item_list">栏目列表</string>
    <string name="expand_recycleView">ExpandRecycleView</string>
    <string name="cust_view_group">自定义ViewGroup</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="camera2_preview">Camera2拍照预览</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>

    <string name="dialog_image_type_title">提示</string>
    <string name="dialog_image_type_message">请选择拍照图片类型</string>
    <string name="dialog_image_type_jpg">JPG格式</string>
    <string name="dialog_image_type_yuv">YUV格式</string>
    <string name="queue_and_thread">队列和线程的使用</string>
    <string name="storage_use">存储使用</string>
    <string name="rxjava_use">RxJava使用</string>
    <string name="print_log_001">输出日志001</string>
    <string name="print_log_002">输出日志002</string>
    <string name="print_log_003">输出日志003</string>
    <string name="print_log_004">输出日志004</string>
    <string name="add_file">添加文件</string>
    <string name="list_file">打印文件</string>
    <string name="delete_file">删除文件</string>
    <string name="file_explorer">文件浏览器</string>
    <string name="type_file">文件</string>
    <string name="type_folder">文件夹</string>
    <string name="print_thread_info">打印线程输出</string>
    <string name="title_thread_local">ThreadLocal的使用</string>
</resources>
