<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.smart.interview.main.QueueAndThreadActivity">

    <Button
        android:id="@+id/print001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_log_001" />

    <Button
        android:id="@+id/print002"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_log_002" />

    <Button
        android:id="@+id/print003"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_log_003" />

    <Button
        android:id="@+id/print004"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_log_004" />


</LinearLayout>
